cabal-version:      3.0
name:               imp-ext
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             CalinovCosmin
maintainer:         cosmin.calinov03@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:            warnings
  hs-source-dirs:    src
  exposed-modules:   Common, Exp, Stmt
  build-depends:     base ^>=4.17.2.1,
                     containers ^>=0.6.7,
                     parallel ^>=3.2.2.0
  default-language:  Haskell2010

executable imp-ext
  import:            warnings
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base,
                     imp-ext,
                     containers,
                     parallel
  default-language:  Haskell2010

test-suite my-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Tests.hs
  build-depends:     base >=4.7 && <5,
                     imp-ext,
                     HUnit >= 1.6
  default-language:  Haskell2010
